--- a/MemeMe1.0-App/Base.lproj/Main.storyboard
+++ b/MemeMe1.0-App/Base.lproj/Main.storyboard
@@ -19,31 +19,33 @@
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="il8-Tx-9M8">
                                 <rect key="frame" x="0.0" y="729" width="375" height="49"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="49" id="9E3-vI-dgu"/>
+                                </constraints>
                                 <items>
                                     <barButtonItem width="106" style="plain" systemItem="fixedSpace" id="Ips-Nk-rEf"/>
-                                    <barButtonItem title="Pick" width="74.5" id="Spk-iq-zoW">
-                                        <connections>
-                                            <action selector="pickAnImageAlbum:" destination="BYZ-38-t0r" id="3KQ-7z-W9V"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem title="Camera" id="5Xh-l8-eXX">
+                                    <barButtonItem systemItem="camera" id="5Xh-l8-eXX">
                                         <connections>
                                             <action selector="pickAnImageFromCamera:" destination="BYZ-38-t0r" id="oGD-TL-C3r"/>
                                         </connections>
                                     </barButtonItem>
+                                    <barButtonItem width="50" style="plain" systemItem="fixedSpace" id="gSg-Pw-gnf"/>
+                                    <barButtonItem title="Album" width="74.5" id="Spk-iq-zoW">
+                                        <connections>
+                                            <action selector="pickAnImageAlbum:" destination="BYZ-38-t0r" id="3KQ-7z-W9V"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="fixedSpace" id="ozW-Uk-qgd"/>
                                 </items>
                             </toolbar>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Xk6-i9-IGl">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xk6-i9-IGl">
                                 <rect key="frame" x="0.0" y="88" width="375" height="641"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="il8-Tx-9M8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8Gm-0F-Xa4"/>
-                            <constraint firstItem="il8-Tx-9M8" firstAttribute="top" secondItem="Xk6-i9-IGl" secondAttribute="bottom" id="FlZ-Xt-hul"/>
-                            <constraint firstItem="Xk6-i9-IGl" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ROx-pw-AJ5"/>
-                            <constraint firstItem="Xk6-i9-IGl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="alZ-Jb-5TL"/>
-                            <constraint firstItem="Xk6-i9-IGl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="kMm-Az-wQG"/>
                             <constraint firstItem="il8-Tx-9M8" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="l3c-BU-Pei"/>
                             <constraint firstItem="il8-Tx-9M8" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="lY1-ED-z7u"/>
                         </constraints>
@@ -51,12 +53,17 @@
                     </view>
                     <navigationItem key="navigationItem" id="nVF-82-Qoe">
                         <barButtonItem key="leftBarButtonItem" systemItem="action" id="8ln-aW-qpA"/>
-                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="cF3-Jc-WSv"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="tSG-Ph-Jed">
+                            <connections>
+                                <action selector="cancelButton:" destination="BYZ-38-t0r" id="n8H-c1-O4l"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="cameraButton" destination="5Xh-l8-eXX" id="ntj-ss-vw5"/>
-                        <outlet property="cancelButton" destination="cF3-Jc-WSv" id="Lxb-FG-Hvm"/>
+                        <outlet property="cancelButton" destination="tSG-Ph-Jed" id="zVd-FG-PT5"/>
                         <outlet property="imagePickerView" destination="Xk6-i9-IGl" id="8HQ-fh-yIC"/>
+                        <outlet property="importButton" destination="8ln-aW-qpA" id="jej-xi-M95"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
