--- a/MemeMe1.0-App/Base.lproj/Main.storyboard
+++ b/MemeMe1.0-App/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                                 <rect key="frame" x="20" y="727" width="374" height="47"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="40"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" autocorrectionType="no"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -89,8 +89,8 @@
                         <outlet property="bottomTextField" destination="OLA-zO-6ar" id="Bnb-WJ-rSu"/>
                         <outlet property="cameraButton" destination="5Xh-l8-eXX" id="ntj-ss-vw5"/>
                         <outlet property="cancelButton" destination="tSG-Ph-Jed" id="zVd-FG-PT5"/>
-                        <outlet property="imagePickerView" destination="Xk6-i9-IGl" id="8HQ-fh-yIC"/>
                         <outlet property="importButton" destination="8ln-aW-qpA" id="jej-xi-M95"/>
+                        <outlet property="originalImage" destination="Xk6-i9-IGl" id="vbr-3G-yUL"/>
                         <outlet property="toolBar" destination="il8-Tx-9M8" id="cqh-wk-4eZ"/>
                         <outlet property="topTextField" destination="BZL-bw-EUB" id="ZzX-5W-pAL"/>
                     </connections>
